Migrate project to Java 25 and enable `-XX:+UseCompactObjectHeaders` in runtime configurations and native packages to improve memory efficiency.